# scrape1

./: .gitignore  README.md  hello.py  pyproject.toml  s1.py  s2.py  s_bs1.py  step_1.py
data/: picca.html  picca_v2.html
